--- a/about.html
+++ b/about.html
@@ -8,6 +8,8 @@
   <title>About - Midwest Christian Academy</title>
   <!-- swiper css -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.css" />
+  <!-- photoswipe css -->
+  <link rel="stylesheet" href="https://unpkg.com/photoswipe@5.3.7/dist/photoswipe.css">
   <!-- icon library -->
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css" />
   <!-- main css -->
@@ -106,18 +108,45 @@
         <!-- Additional required wrapper -->
         <div class="swiper-wrapper">
           <!-- Slides -->
-          <img class="swiper-slide facility-img" src="./images/facility01.webp">
+          <a class="swiper-slide" href="./images/facility01.webp"
+            data-pswp-width="1000" data-pswp-height="563" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility02.webp"
+            data-pswp-width="1920" data-pswp-height="1080" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility03.webp"
+            data-pswp-width="767" data-pswp-height="368" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility01.webp"
+            data-pswp-width="1000" data-pswp-height="563" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility02.webp"
+            data-pswp-width="1920" data-pswp-height="1080" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility03.webp"
+            data-pswp-width="767" data-pswp-height="368" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility01.webp"
+            data-pswp-width="1000" data-pswp-height="563" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility01.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility02.webp"
+            data-pswp-width="1920" data-pswp-height="1080" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility02.webp">
+          </a>
+          <a class="swiper-slide" href="./images/facility03.webp"
+            data-pswp-width="767" data-pswp-height="368" target="_blank">
+            <img class="swiper-slide facility-img" src="./images/facility03.webp">
+          </a>
+          <!-- <img class="swiper-slide facility-img" src="./images/facility01.webp">
           <img class="swiper-slide facility-img" src="./images/facility02.webp">
-          <img class="swiper-slide facility-img" src="./images/facility03.webp">
-          <img class="swiper-slide facility-img" src="./images/facility01.webp">
-          <img class="swiper-slide facility-img" src="./images/facility02.webp">
-          <img class="swiper-slide facility-img" src="./images/facility03.webp">
-          <img class="swiper-slide facility-img" src="./images/facility01.webp">
-          <img class="swiper-slide facility-img" src="./images/facility02.webp">
-          <img class="swiper-slide facility-img" src="./images/facility03.webp">
-          <img class="swiper-slide facility-img" src="./images/facility01.webp">
-          <img class="swiper-slide facility-img" src="./images/facility02.webp">
-          <img class="swiper-slide facility-img" src="./images/facility03.webp">
+          <img class="swiper-slide facility-img" src="./images/facility03.webp"> -->
         </div>
       </div>
     </section>
@@ -204,6 +233,41 @@
 
   <!-- swiper js -->
   <script src="https://cdn.jsdelivr.net/npm/swiper@9/swiper-bundle.min.js"></script>
+  <script>
+    // Swiper - About > Facilities
+    const swiper = new Swiper(".facilitiesSlider", {
+      loop: true,
+      slidesPerView: 3.5,
+      spaceBetween: 16,
+      centeredSlides: true,
+      breakpoints: {
+        // when window width is >= 768px
+        768: {
+          slidesPerView: 2.5,
+        },
+        920: {
+          slidesPerView: 3.5,
+        },
+      },
+      autoplay: {
+        delay: 3000,
+      },
+      navigation: {
+        nextEl: ".swiper-button-next",
+        prevEl: ".swiper-button-prev",
+      },
+    });
+  </script>
+  <!-- photoswipe js -->
+  <script type="module">
+    import PhotoSwipeLightbox from 'https://unpkg.com/photoswipe@5.3.7/dist/photoswipe-lightbox.esm.js';
+    const lightbox = new PhotoSwipeLightbox({
+      gallery: '.facilitiesSlider',
+      children: 'a',
+      pswpModule: () => import('https://unpkg.com/photoswipe@5.3.7/dist/photoswipe.esm.js')
+    });
+    lightbox.init();
+  </script>
   <!-- main js -->
   <script src="scripts.js"></script>
 </body>
